Name:                   dns
Version:                4.0.1
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               DNS library in Haskell
Description:
  A thread-safe DNS library for both clients and servers written
  in pure Haskell.
Category:               Network
Cabal-Version:          2.0
Build-Type:             Simple
Extra-Source-Files:     Changelog.md
                        cabal.project
                        cbits/dns.c
Tested-With:            GHC == 8.0.2
                      , GHC == 8.2.2
                      , GHC == 8.4.4
                      , GHC == 8.6.5
                      , GHC == 8.8.1

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Hs-Source-Dirs:       ./ ./internal
  Exposed-Modules:      Network.DNS
                        Network.DNS.Lookup
                        Network.DNS.LookupRaw
                        Network.DNS.Resolver
                        Network.DNS.Utils
                        Network.DNS.Types
                        Network.DNS.Decode
                        Network.DNS.Encode
                        Network.DNS.IO
                        Network.DNS.Imports
                        Network.DNS.Types.Internal
                        Network.DNS.Types.Resolver
                        Network.DNS.Resolver.Internal
                        Network.DNS.Decode.Parsers
                        Network.DNS.Decode.Internal
                        Network.DNS.Encode.Builders
                        Network.DNS.Encode.Internal
                        Network.DNS.StateBinary
                        Network.DNS.Memo
                        Network.DNS.Base32Hex
  Other-Modules:        Network.DNS.Transport
  Build-Depends:        array
                      , async
                      , attoparsec
                      , auto-update
                      , base >= 4 && < 5
                      , base16-bytestring
                      , base64-bytestring
                      , bytestring
                      , containers
                      , cryptonite
                      , hourglass
                      , iproute
                      , mtl
                      , network
                      , psqueues

  if os(windows)
    C-Sources:        cbits/dns.c
    Extra-Libraries:  iphlpapi
                      
